# Shape-Guided-Mixed-Metro-Map-Layout

./: README.md  Settings-for-Tests.md  build.sh  execute.sh  export-optimisation-steps.sh  python_setup.sh
Deformationprocess/: CMakeLists.txt
Deformationprocess/Base/: CMakeLists.txt
Deformationprocess/Base/src/: Base.cpp  Common.h  Config.cpp  Coord2.h  Grid2.cpp
Deformationprocess/Graph/src/: BaseEdgeProperty.cpp  BaseVertexProperty.h  Graph.h  Guide.cpp  Metro.cpp
Deformationprocess/MetroShapes/matching/: Manuelpath.h  Stationmatching.cpp
Deformationprocess/MetroShapes/optimization/: Mixedlayout.cpp  Smooth.cpp  Smooth.h
Deformationprocess/UI/src/: BaseView.h  GraphicsEdgeItem.cpp  GraphicsEdgeItem.h  GraphicsPolygonItem.cpp  GraphicsVertexItem.h  GraphicsView.h
Deformationprocess/UI/src/Bitmap/: Widget.cpp  Window.h  Window.ui
Deformationprocess/config/: MainWindow.conf
Deformationprocess/data/guide/: eye-guide-smaller.txt  heart-guide.txt  lisabon2-guide.txt  montral-compl.txt  montreal_guide.txt
Deformationprocess/data/metro/: berlin-sbahn-Planar.txt  lisbon_center_manuell_planar.txt  paris-metro-newColor-Planar-2-fixTempl.txt  paris-metro.txt
Deformationprocess/resources/: ui.qrc
MetroShapes/: .gitignore  README.md
MetroShapes/Base/src/: Base.h  Common.cpp  Common.h  Config.h  Coord2.cpp  Grid2.h  Label.cpp  Label.h
MetroShapes/Graph/: CMakeLists.txt
MetroShapes/Graph/src/: BaseEdgeProperty.h  BaseGraphProperty.cpp  BaseGraphProperty.h  BaseUndirectedGraph.cpp  BaseUndirectedGraph.h  BaseVertexProperty.cpp  Graph.cpp  Guide.h  Metro.cpp  Metro.h
MetroShapes/MetroShapes/: CMakeLists.txt  main.cpp
MetroShapes/MetroShapes/core/: MetroShapes.cpp  MetroShapes.h
MetroShapes/MetroShapes/matching/: AutoMatching.cpp  AutoMatching.h  Manuelpath.cpp  Stationmatching.h  automatching-classes-functions.md
MetroShapes/MetroShapes/optimization/: Mixedlayout.cpp  Mixedlayout.h  Smooth.cpp  Smooth.h
MetroShapes/UI/: CMakeLists.txt
MetroShapes/UI/src/: BaseView.cpp  GraphicsBallItem.cpp  GraphicsBallItem.h  GraphicsPolygonItem.h  GraphicsVertexItem.cpp  GraphicsView.cpp  GraphicsView.h  MainWindow.cpp  MainWindow.h
MetroShapes/UI/src/Bitmap/: Widget.h  Window.cpp  ui_Window.h
MetroShapes/data/guide/: bear_head_guide-closed.txt  circle-guide.txt  cloud-guide.txt  oval-guide.txt
MetroShapes/data/metro/: berlin-sbahn+UBahn-Planar-multiroutes.txt  montreal-metro.txt  moscow-simplified2-metro-planrized.txt  munich-ubahn.txt  prague-metro.txt  singapore-MRT-2021-planar-circleExtension.txt  taipei-new.txt  tokyo-all.txt
Tests/parameter-test-220730/: interpretation_of_varible_interpretation.md
Tests/parameter-test-220730/moscow/default/mixed/: output_metro.graphml
Tests/parameter-test-220730/moscow/default/smooth/: output_metro.graphml
Tests/parameter-test-220730/moscow/opt_1/mixed/: output_metro.graphml
Tests/parameter-test-220730/moscow/opt_1/smooth/: output_metro.graphml
Tests/parameter-test-220730/moscow/opt_2/mixed/: output_metro.graphml
Tests/parameter-test-220730/moscow/opt_2/smooth/: output_guide.graphml  output_metro.graphml
Tests/shape-invariance-tests-220727/montreal/default/: errorrate.txt
Tests/shape-invariance-tests-220727/paris-eye/scaled/: errorrate.txt
Tests/shape-invariance-tests-220727/taipei/scaled/: errorrate.txt
ac-metro-schematization-framework/: class.mdj  requirements_pg22.txt  setup.py
ac-metro-schematization-framework/ac_metro/error/: metroErrors.py
ac-metro-schematization-framework/ac_metro/exporting/: abstractExport.py  pickleExport.py
ac-metro-schematization-framework/ac_metro/importing/: abstractImport.py  graphmlImport.py  pickleImport.py
ac-metro-schematization-framework/ac_metro/map/: map.py
ac-metro-schematization-framework/ac_metro/render/: abstractRender.py  ipeRender.py  matplotlibGraphRender.py  matplotlibGridRender.py  matplotlibRender.py  simpleIpeRender.py
ac-metro-schematization-framework/ac_metro/render/static/: metro_marks.isy
ac-metro-schematization-framework/ac_metro/schematic/: abstractSchematic.py  octiMetroHeuristicSchematic.py  octiMetroSchematic.py
ac-metro-schematization-framework/ac_metro/tests/: octi_metro_heuristic.py
ac-metro-schematization-framework/ac_metro/utility/: abstractUtility.py
ac-metro-schematization-framework/ac_metro/utility/color/: colorDictUtility.py  distantColorUtility.py
ac-metro-schematization-framework/ac_metro/utility/deg2Heuristic/: deg2HeuristicUtility.py  undeg2HeuristicUtility.py
ac-metro-schematization-framework/ac_metro/utility/geometry/: averageDistanceUtility.py  boundingBoxUtility.py  circularVertexOrderUtility.py  simplificationUtility.py
ac-metro-schematization-framework/ac_metro/utility/grid/: gridBoundingBoxUtility.py  gridCreatorUtility.py  gridCrossingsUtility.py  gridOverlayCombineUtility.py  gridPlacementUtility.py  gridRasterizeUtility.py  mapCenteringUtility.py
ac-metro-schematization-framework/ac_metro/utility/paths/: getPathsUtility.py  spaceAroundPathsUtility.py
ac-metro-schematization-framework/ac_metro/utility/planarization/: planarizationUtility.py  unplanarizationUtility.py
ac-metro-schematization-framework/ac_metro/utility/routing/: angledDijkstra.py  angledSetToSetDijkstra.py
ac-metro-schematization-framework/ac_metro/utility/transform/: mapTranslater.py  rotateUtility.py  scaleUtility.py
output-optimisation/berlin/: output_guide.graphml  output_metro.graphml
output-optimisation/berlinBear/: output_guide.graphml  output_metro.graphml
output-optimisation/berlin_0327_1430/: output_metro.graphml
output-optimisation/lisabon/: output_guide.graphml  output_metro.graphml
output-optimisation/montreal/: output_guide.graphml  output_metro.graphml
output-optimisation/moscow/: output_metro.graphml
output-optimisation/paris-cloud/: output_guide.graphml  output_metro.graphml
output-optimisation/paris-eye/: output_guide.graphml  output_metro.graphml
output-optimisation/taipei/: output_guide.graphml  output_metro.graphml
output-optimisation/tokyo/: output_guide.graphml  output_metro.graphml
(+50 files in other folders)
